# examples

./: .gitignore
azure/durablefunc/: package-lock.json  package.json  test.http
azure/entity/: package-lock.json  package.json  test.http
cpp/define/: main.cpp
cpp/ninja/: CMakeLists.txt  main.cpp
cpp/ninja/lib1/: CMakeLists.txt  lib1.cpp  lib1.h
cpp/ninja/lib2/: CMakeLists.txt  lib2.cpp  lib2.h
excel/demo1/: connect.py  container.py  demo1.py  device.py  draw.py  input_connect.txt  input_container.txt  input_device.txt  merge.py  output_connect.txt  output_container.txt  output_device.txt  output_relationship.txt
go/callback/: go.mod  main.go
go/helloworld/: main
java/copy/: Main.java
java/demo1/: A.java  B.java  C.java  data.java
javascript/child/: index.js  package-lock.json  package.json
javascript/docker/: index.js  package.json
javascript/express/: index.js  index2.js  index3.js  pnpm-lock.yaml  test.http  tmp.js
javascript/fetch/: index.js  index2.js  package-lock.json  package.json
javascript/funcode/: index.js  package.json
javascript/json/: index.js  test.json
javascript/weather/: index.js  index2.js  package-lock.json  package.json
k8s/elasticquota/: README.md
llm/HuggingFace/: main.py
llm/Transformer/: main.py
python/: .gitignore
python/Class/: main.py  main2.py
python/FuncProgram/: main.ipynb  main2.ipynb
python/PyDantic/: .env  main.py
python/args/: main.ipynb
python/azure/: function_app.py  test.http
python/basemodel/: main.py
python/codezip/: test.py
python/overload/: main.py
ray/: main.py  test.py
(+124 files in other folders)
